--- a/pandar_pointcloud/CMakeLists.txt
+++ b/pandar_pointcloud/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.5)
 project(pandar_pointcloud)
-add_definitions(-fPIC)
+#add_definitions(-fPIC)
 # Default to C++14
 if(NOT CMAKE_CXX_STANDARD)
   set(CMAKE_CXX_STANDARD 17)
@@ -19,6 +19,8 @@ find_package(builtin_interfaces REQUIRED)
 find_package(std_msgs REQUIRED)
 find_package(sensor_msgs REQUIRED)
 find_package(OpenSSL REQUIRED)
+find_package(pcl_conversions REQUIRED)
+find_package(std_srvs REQUIRED)
 message("OpenSSL include dir: ${OPENSSL_INCLUDE_DIR}")
 
 set(libpcap_LIBRARIES -lpcap)
@@ -119,10 +121,11 @@ target_include_directories(pandar_transform_node PRIVATE
 					  
 ament_target_dependencies(pandar_transform_node ${dependencies})
 
-
+install(TARGETS PandarSwiftLib pandar_input 
+  DESTINATION lib)
 install(TARGETS pandar_cloud_node pandar_transform_node
   DESTINATION lib/${PROJECT_NAME})
-install(DIRECTORY launch
+install(DIRECTORY launch params
   DESTINATION share/${PROJECT_NAME})  
 ament_package()
 
